Fix unwanted spacing at top of Account Preferences page when viewing on mobile

--- a/app/static/account-preferences.css
+++ b/app/static/account-preferences.css
@@ -417,6 +417,7 @@ input[type=radio] + label>img {width: 60px; height: 60px;}
 	.userstats {margin-top: 15px;}
 	#flashed-err {margin-top: 16px;}
     #flashed-norm {margin-top: 16px;}
+	#recipenav {height: auto;}
 }
 @media screen and (max-width: 520px) { 
 	.userstats {width: calc(100% - 20px);}
